--- a/app/views/code_climate/departments/show.erb
+++ b/app/views/code_climate/departments/show.erb
@@ -9,7 +9,7 @@
     <div class="col-md-12">
       <%= render 'code_climate_department_report',
                  department: @department,
-                 projects_details: @code_climate.projects_details
+                 projects_details: @code_climate
       %>
     </div>
   </div>
