--- a/app/views/shared/user/_sidebar.html.erb
+++ b/app/views/shared/user/_sidebar.html.erb
@@ -13,7 +13,7 @@
           selected: value_from_user_param,
           disabled: 0
         ),
-        class: 'user-selection'
+        class: 'user-selection full-with'
       %>
     </div>
   </div>
