--- a/app/assets/stylesheets/abstracts/_mixins.scss
+++ b/app/assets/stylesheets/abstracts/_mixins.scss
@@ -1,5 +1,4 @@
-@mixin flex-column-select {
-  width: 100%;
+@mixin centered-flex-columns {
   display: flex;
   justify-content: center;
   flex-direction: column;
