--- a/app/assets/stylesheets/shared/_line-chart.scss
+++ b/app/assets/stylesheets/shared/_line-chart.scss
@@ -1,5 +1,15 @@
-.chart-container{
+.chart {
+  height: 300px;
+  display: block;
+}
+
+.main-charts {
   display: flex;
+  flex-direction: row;
+}
+
+.chart-container {
+  flex: 1;
   flex-direction: column;
 }
 
