--- a/app/views/development_metrics/review_turnaround/_details_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_details_metric.erb
@@ -1,6 +1,8 @@
-<button type="button" class="btn btn-secondary details-button">View details</button>
+<div>
+  <button type="button" class="btn btn-secondary details-button">View details</button>
+</div>
 
-<div style="display: none">
+<div>
   <%= render partial: 'shared/line-chart',
               locals: {
                 metric_name: '',
