--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,8 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <div class="container-fluid">
-      <div class="row">
-        <%= yield %>
-      </div>
+    <div class="main-container">
+      <%= yield %>
     </div>
   </body>
 </html>
