--- a/app/views/shared/department/_nav-filter.erb
+++ b/app/views/shared/department/_nav-filter.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for :metric, url: departments_development_metrics_path,
   method: 'GET', html: {
-    class: 'nav-filter p-3 shadow-box sticky-top',
+    class: 'nav-filter p-3 shadow-box',
     id: 'nav-filter-form' } do |f|%>
   <%= yield f if block_given? %>
 <% end %>
