--- a/app/views/development_metrics/departments.erb
+++ b/app/views/development_metrics/departments.erb
@@ -26,7 +26,7 @@
     <div class="graph">
       <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
     </div>
-    <div class="graph">
+    <div class="graph details">
       <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
     </div>
   </div>
