--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -1,21 +1,35 @@
 <%= render 'shared/project/sidebar'%>
-<div class="col-md-10">
-  <%= render 'shared/project/nav-filter' do |f|%>
-    <div class="row">
-      <div class="col-md-5 period-input">
-        <%= render 'shared/interval-filter', form: f %>
+<div class="metrics-container">
+  <div class="filter sticky-top">
+    <%= render 'shared/project/nav-filter' do |f|%>
+      <div class="row">
+        <div class="col-md-5 period-input">
+          <%= render 'shared/interval-filter', form: f %>
+        </div>
+        <div class="col-md-7">
+          <%= render 'shared/code-climate-project-summary', code_climate: @code_climate %>
+        </div>
       </div>
-      <div class="col-md-7">
-      <%= render 'shared/code-climate-project-summary', code_climate: @code_climate %>
-      </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 
   <%= render('code_owners', code_owners: @code_owners) unless @code_owners.nil? %>
 
-  <%= render 'development_metrics/review_turnaround/main_metric', review_turnaround: @review_turnaround %>
-  <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
+  <div class="metrics">
+    <div class="graph">
+      <%= render 'development_metrics/review_turnaround/main_metric', review_turnaround: @review_turnaround %>
+    </div>
+    <div class="graph details">
+      <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
+    </div>
+  </div>
 
-  <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
-  <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
+  <div class="metrics">
+    <div class="graph">
+      <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
+    </div>
+    <div class="graph details">
+      <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
+    </div>
+  </div>
 </div>
