--- a/app/views/development_metrics/review_turnaround/_details_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_details_metric.erb
@@ -2,7 +2,7 @@
   <button type="button" class="btn btn-secondary details-button">View details</button>
 </div>
 
-<div>
+<div style="display: none">
   <%= render partial: 'shared/line-chart',
               locals: {
                 metric_name: '',
