--- a/app/views/users/projects/index.erb
+++ b/app/views/users/projects/index.erb
@@ -1,12 +1,12 @@
 <%= render 'shared/user/sidebar'%>
-<div class="col-md-10">
+<div class="metrics-container">
   <h2 class='user-name'><%= @user.login%></h2>
   <hr>
-  <span>Code Owner in:</span>
+  <span class='ml-3'>Code Owner in:</span>
   <% if @projects.present? %>
     <ul>
       <% @projects.each do |project|%>
-        <li>
+        <li class='ml-3'>
           <%= link_to project.name,
               projects_development_metrics_path(project_name: project.name, metric: {period: 'daily'}),
               class: 'link-none-style-black'
@@ -18,7 +18,7 @@
     <p>
       <br>
       <strong>
-        <em>This user is not participating in any project as code owner</em>.
+        <em class='ml-3'>This user is not participating in any project as code owner</em>.
       </strong>
     </p>
   <%end%>
