--- a/app/views/open_source/index.erb
+++ b/app/views/open_source/index.erb
@@ -12,19 +12,19 @@
     </div>
   </div>
   <div class="main-container">
-    <div class='p-3 fl-3'>
+    <div class='open-source-metric'>
       <%= line_chart [{}], ytitle: "Repository Visits" %>
     </div>
-    <div class='metrics-summary-group fl-1'>
+    <div class='metrics-summary-group'>
       <span class='metrics-summary-item'>800 visits this month</span>
       <span class='metrics-summary-item'>3500 visits this year</span>
     </div>
   </div>
   <div class="main-container">
-    <div class='p-3 fl-3'>
+    <div class='open-source-metric'>
       <%= line_chart [{}], ytitle: "Stars" %>
     </div>
-    <div class='metrics-summary-group fl-1'>
+    <div class='metrics-summary-group'>
       <span class='metrics-summary-item'>56 new stars this month</span>
       <span class='metrics-summary-item'>3600 total stars</span>
     </div>
