--- a/app/views/development_metrics/review_turnaround/_details_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_details_metric.erb
@@ -1,4 +1,6 @@
-<button type="button" class="btn btn-secondary details-button">View details</button>
+<div>
+  <button type="button" class="btn btn-secondary details-button">View details</button>
+</div>
 
 <div style="display: none">
   <%= render partial: 'shared/line-chart',
