--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -3,3 +3,9 @@
               metric_name: 'Review Turnaround',
               metric: review_turnaround[:per_project] || review_turnaround[:per_department]
             } if review_turnaround && (review_turnaround[:per_project] || review_turnaround[:per_department]) %>
+<%= render partial: 'shared/column-chart',
+            locals: {
+              metric_name: 'Review Turnaround',
+              metric: review_turnaround[:per_department_distribution]
+            } if review_turnaround && review_turnaround[:per_department_distribution] %>
+
