--- a/app/views/development_metrics/merge_time/_main_metric.erb
+++ b/app/views/development_metrics/merge_time/_main_metric.erb
@@ -3,3 +3,8 @@
               metric_name: 'Merge Time',
               metric: merge_time[:per_project] || merge_time[:per_department]
             } if merge_time && (merge_time[:per_project] || merge_time[:per_department]) %>
+<%= render partial: 'shared/column-chart',
+            locals: {
+              metric_name: 'Distribution',
+              metric: merge_time[:per_department_distribution]
+            } if merge_time && merge_time[:per_department_distribution] %>
