refactors code climate summary

--- a/app/assets/stylesheets/abstracts/_mixins.scss
+++ b/app/assets/stylesheets/abstracts/_mixins.scss
@@ -6,7 +6,6 @@
 
 @mixin flex-row-start {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  align-items: flex-end;
   flex-direction: row;
 }
