--- a/app/assets/stylesheets/abstracts/_utils.scss
+++ b/app/assets/stylesheets/abstracts/_utils.scss
@@ -18,3 +18,12 @@
 .full-with{
   width: 100%;
 }
+
+.input-height{
+  height: 3rem !important;
+}
+
+.page-title{
+  text-align: center;
+  font-size: 1.5rem;
+}
