--- a/app/assets/stylesheets/metrics/_code-climate-deparments.scss
+++ b/app/assets/stylesheets/metrics/_code-climate-deparments.scss
@@ -18,3 +18,12 @@ table.code-climate-projects-report {
     }
   }
 }
+
+.project-name-link{
+  text-decoration: none;
+  color: black;
+  &:hover{
+    text-decoration: none;
+    color: black;
+  }
+}
