--- a/app/views/shared/_line-chart.erb
+++ b/app/views/shared/_line-chart.erb
@@ -1,5 +1,5 @@
 <div class='p-3 chart-container'>
-  <span class='metric-title'><%= metric_name %></span>
+  <span class='page-title'><%= metric_name %></span>
   <%= line_chart metric,
       ytitle: "Time as hours",
       suffix: "hours",
