--- a/app/views/code_climate/departments/show.erb
+++ b/app/views/code_climate/departments/show.erb
@@ -2,14 +2,22 @@
 <div class="col-md-10">
   <div class="row p-3">
     <div class="col-md-12">
-      <%= render 'department_projects_report_header', department: @department %>
+      <%= render 'nav-filter', department: @department do |f|%>
+        <div class="row">
+          <div class="col-md-5 period-input">
+            <%= render 'shared/interval-filter', form: f %>
+          </div>
+          <div class="col-md-8 col-md-offset-1">
+          </div>
+        </div>
+      <%end%>
     </div>
   </div>
   <div class="row p-3">
     <div class="col-md-12">
       <%= render 'code_climate_department_report',
                  department: @department,
-                 projects_details: @code_climate
+                 projects_details: @code_climate if @code_climate.present?
       %>
     </div>
   </div>
