--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -5,7 +5,7 @@
       <div class="col-md-5 period-input">
         <%= render 'shared/interval-filter', form: f %>
       </div>
-      <div class="col-md-8 col-md-offset-1">
+      <div class="col-md-7">
         <%= render 'development_metrics/code_climate/code_climate_project_summary', code_climate: @code_climate %>
       </div>
     </div>
