--- a/app/views/users/projects/index.erb
+++ b/app/views/users/projects/index.erb
@@ -8,7 +8,7 @@
       <% @projects.each do |project|%>
         <li>
           <%= link_to project.name,
-              projects_development_metrics_path(project_name: project.name, metric: {period: 'daily'}),
+              projects_development_metrics_path(project_name: project.name, metric: {period: 4}),
               class: 'link-none-style-black'
           %>
         </li>
