--- a/app/views/code_climate/departments/_nav-filter.erb
+++ b/app/views/code_climate/departments/_nav-filter.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for :metric, url: code_climate_department_path,
   method: 'GET', html: {
-    class: 'nav-filter p-3 shadow-box sticky-top',
+    class: 'nav-filter p-3 shadow-box',
     id: 'nav-filter-form' } do |f|%>
       <h4 class="text-center">CodeClimate report for <%= department.name %> projects Department</h4>
       <div class="row justify-content-center mt-3">
