--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -6,6 +6,7 @@
 <%= render partial: 'shared/column-chart',
             locals: {
               metric_name: 'Distribution',
+              suffix: " reviews",
               metric: review_turnaround[:per_department_distribution]
             } if review_turnaround && review_turnaround[:per_department_distribution] %>
 
