--- a/app/views/shared/_column-chart.erb
+++ b/app/views/shared/_column-chart.erb
@@ -2,7 +2,7 @@
   <span class='metric-title'><%= metric_name %></span>
   <div id='chart-2' class='chart'>
     <%= column_chart metric,
-        suffix: " reviews",
+        suffix: suffix,
         library: { spanGaps: true } %>
   </div>
 </div>
