--- a/app/views/development_metrics/merge_time/_main_metric.erb
+++ b/app/views/development_metrics/merge_time/_main_metric.erb
@@ -6,5 +6,6 @@
 <%= render partial: 'shared/column-chart',
             locals: {
               metric_name: 'Distribution',
+              suffix: " pull requests",
               metric: merge_time[:per_department_distribution]
             } if merge_time && merge_time[:per_department_distribution] %>
