Department merge time distribution (#256)
* Implemented

* Requested changes

* Minor changes

--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -5,7 +5,8 @@
             } if review_turnaround && (review_turnaround[:per_project] || review_turnaround[:per_department]) %>
 <%= render partial: 'shared/column-chart',
             locals: {
-              metric_name: 'Review Turnaround',
+              metric_name: 'Distribution',
+              suffix: " reviews",
               metric: review_turnaround[:per_department_distribution]
             } if review_turnaround && review_turnaround[:per_department_distribution] %>
 
