--- a/app/views/open_source/index.erb
+++ b/app/views/open_source/index.erb
@@ -7,30 +7,7 @@
     <li><b>4</b> iOS projects</li>
   </div>
   <div class="main-container">
-    <div class='col-md-9 p-3'>
-      <%= line_chart @visits_per_language.all_datasets, ytitle: "Repository Unique Visits" %>
-    </div>
-  </div>
-  <div class="main-container">
-    <div class='open-source-metric'>
-      <%= line_chart [{}], ytitle: "Repository Visits" %>
-    </div>
-    <div class='metrics-summary-group'>
-      <span class='metrics-summary-item'>800 visits this month</span>
-      <span class='metrics-summary-item'>3500 visits this year</span>
-    </div>
-  </div>
-  <div class="main-container">
-    <div class='open-source-metric'>
-      <%= line_chart [{}], ytitle: "Stars" %>
-    </div>
-    <div class='metrics-summary-group'>
-      <span class='metrics-summary-item'>56 new stars this month</span>
-      <span class='metrics-summary-item'>3600 total stars</span>
-    </div>
-  </div>
-  <div class="main-container">
-    <div class='open-source-metric'>
+    <div class='open-source-chart'>
       <%= line_chart @visits_per_language.all_datasets, ytitle: "Weekly Repository Unique Visits" %>
     </div>
     <div class='metrics-summary-group'>
@@ -39,7 +16,7 @@
     </div>
   </div>
   <div class="main-container">
-    <div class='open-source-metric'>
+    <div class='open-source-chart'>
       <%= line_chart [{}], ytitle: "Stars" %>
     </div>
     <div class='metrics-summary-group'>
