fixes request changes

--- a/app/views/shared/_interval-filter.erb
+++ b/app/views/shared/_interval-filter.erb
@@ -5,4 +5,4 @@
   required: false,
   as: :numeric
 %>
-<%= form.button :submit, 'Seleccionar', class: 'btn-secondary ml-1', id: 'submitButton' %>
+<%= form.button :submit, 'Submit',class: 'btn-secondary ml-1', id: 'submitButton' %>
