--- a/app/views/open_source/index.erb
+++ b/app/views/open_source/index.erb
@@ -1,10 +1,9 @@
 <div class="metrics-container">
   <div class="p-5">
-    <span><b>32</b> open source projects:</span>
-    <li><b>16</b> ruby projects</li>
-    <li><b>8</b> ruby projects</li>
-    <li><b>14</b> react projects</li>
-    <li><b>4</b> iOS projects</li>
+    <span><b><%= @total_projects %></b> open source <%= 'project'.pluralize(@total_projects) %>:</span>
+    <% @projects_per_language.each do |language, project_count| %>
+      <li><b><%= project_count %></b> <%= language.titleize %> <%= 'project'.pluralize(project_count) %></li>
+    <% end %>
   </div>
   <div class="main-container">
     <div class='open-source-chart'>
