--- a/app/views/open_source/index.erb
+++ b/app/views/open_source/index.erb
@@ -9,12 +9,12 @@
     <div class='open-source-chart'>
       <%= line_chart @visits_per_language.all_datasets, ytitle: "Weekly Repository Unique Visits" %>
     </div>
-    <div class='metrics-summary-group'>
+    <div class='metrics-summary-group' hidden>
       <span class='metrics-summary-item'>800 visits this month</span>
       <span class='metrics-summary-item'>3500 visits this year</span>
     </div>
   </div>
-  <div class="main-container">
+  <div class="main-container" hidden>
     <div class='open-source-chart'>
       <%= line_chart [{}], ytitle: "Stars" %>
     </div>
