--- a/app/views/development_metrics/users.erb
+++ b/app/views/development_metrics/users.erb
@@ -1,3 +1,4 @@
-<%= render 'shared/user/sidebar'%>
+<div class="body-empty-container col-md-12 d-flex justify-content-center align-items-center">
+  <span>Please select a user to see the projects he is working on</span>
+</div>
 
-<div class='main-column'></div>
