--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,4 @@
-<nav class="nav nav-style nav-txt-color p-2 nav-items-container">
-  <span class="navbar-brand nav-txt-color">Engineering Metrics</span>
+<nav class="nav nav-style nav-txt-color p-2 nav-items-container col-md-12">
   <%= link_to 'Development Metrics', development_metrics_path, class: 'nav-link active nav-txt-color'%>
   <%= link_to 'Tech Blog', tech_blog_path, class: 'nav-link active nav-txt-color'%>
   <%= link_to 'Open Source', open_source_path, class: 'nav-link active nav-txt-color'%>
