--- a/app/views/users/projects/index.erb
+++ b/app/views/users/projects/index.erb
@@ -1,5 +1,4 @@
-<%= render 'shared/user/sidebar'%>
-<div class="metrics-container">
+<div class="metrics-container col-md-12">
   <h2 class='user-name'><%= @user.login%></h2>
   <hr>
   <span class='ml-3'>Code Owner in:</span>
