--- a/app/assets/stylesheets/abstracts/_utils.scss
+++ b/app/assets/stylesheets/abstracts/_utils.scss
@@ -32,3 +32,14 @@
   padding: 0;
   list-style: none;
 }
+
+.circle{
+  border-radius: 50%;
+  height: 0.5rem;
+  width: 0.5rem;
+  background-color: $white;
+}
+
+.font-size-1 {
+  font-size: 1rem;
+}
