--- a/app/assets/stylesheets/abstracts/_variables.scss
+++ b/app/assets/stylesheets/abstracts/_variables.scss
@@ -1,2 +1,6 @@
+$primary-color: #515152;
 $nav-bg-color: #ab0404;
-$nav-border-color: 1px solid rgb(75, 75, 75);
+$white: #ffffff;
+$light-grey: #737373;
+$nav-border-color: 1px solid $light-grey;
+
