--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -1,5 +1,4 @@
-<%= render 'shared/project/sidebar'%>
-<div class="metrics-container container">
+<div class="metrics-container container col-md-12">
   <%= render 'shared/project/nav-filter' do |f|%>
     <div class="row">
       <div class="col-md-5 period-input">
@@ -12,22 +11,29 @@
   <% end %>
 
   <%= render('code_owners', code_owners: @code_owners) unless @code_owners.nil? %>
+  <% if @review_turnaround && @merge_time %>
+    <div class="metrics">
+      <div class="graph">
+        <%= render 'development_metrics/review_turnaround/main_metric', review_turnaround: @review_turnaround %>
+      </div>
+      <div class="graph details">
+        <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
+      </div>
+    </div>
 
-  <div class="metrics">
-    <div class="graph">
-      <%= render 'development_metrics/review_turnaround/main_metric', review_turnaround: @review_turnaround %>
+    <div class="metrics">
+      <div class="graph">
+        <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
+      </div>
+      <div class="graph details">
+        <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
+      </div>
     </div>
-    <div class="graph details">
-      <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
+  <%else%>
+    <div class="row">
+      <div class="body-empty-container col-md-12 d-flex justify-content-center align-items-center">
+        <span>Please select a project to see its metrics</span>
+      </div>
     </div>
-  </div>
-
-  <div class="metrics">
-    <div class="graph">
-      <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
-    </div>
-    <div class="graph details">
-      <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
-    </div>
-  </div>
+  <%end%>
 </div>
