--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,18 @@
   </head>
 
   <body>
-    <%= render 'layouts/navigation' %>
-    <div class="main-container">
-      <%= yield %>
+    <div class="container-fluid">
+      <div class="row">
+        <%= render 'shared/sidebar'%>
+        <div class='main-container col-md-10 offset-md-2'>
+          <div class="row">
+            <%= render 'layouts/navigation' %>
+          </div>
+          <div class="row">
+            <%= yield %>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
