--- a/app/views/development_metrics/code_climate/_code_climate_department_summary.erb
+++ b/app/views/development_metrics/code_climate/_code_climate_department_summary.erb
@@ -1,17 +1,17 @@
-<div class="col-md-12">
-  <div class="code-climate-summary-container p-3">
-    <div class="code-climate-summary-title">
+<div class="code-climate-summary col-md-12">
+  <div class="container p-3">
+    <div class="title">
       <b>CodeClimate summary</b>
     </div>
     <% if !code_climate || code_climate.empty? -%>
       <div class="row">
         <div class="col-md-12 text-center mt-2">
-          <span class="code-climate-summary text-danger">No information available</span>
+          <span class="text-danger">No information available</span>
         </div>
       </div>
     <% else -%>
-      <div class="code-climate-summary-info">
-        <div class="code-climate-summary-ratings">
+      <div class="info">
+        <div class="item-list">
           <% code_climate.each_project_rate do |letter, projects_count| -%>
             <div>
               <%= projects_count %> <%= 'project'.pluralize(projects_count) %> with
@@ -19,14 +19,16 @@
             </div>
           <% end -%>
         </div>
-        <div class="code-climate-summary-issues">
+        <div class="item-list">
           <span>Average of <b><%= code_climate.invalid_issues_count_average %> invalid</b> issues</span>
           <span>Average of <b><%= code_climate.wont_fix_issues_count_average %> won't fix</b> issues</span>
           <span>Average of <b><%= code_climate.open_issues_count_average %> open</b> issues</span>
         </div>
         <div>
-          <%= link_to 'See report', code_climate_department_path(department.name, filter_url_query),
-                      class: 'btn btn-secondary' %>
+          <%= link_to 'See report',
+                      code_climate_department_path(department.name, filter_url_query),
+                      class: 'btn btn-secondary'
+          %>
         </div>
       </div>
     <% end -%>
