adds conditionals to render a css class into navbar

--- a/app/assets/stylesheets/layout/_navigation.scss
+++ b/app/assets/stylesheets/layout/_navigation.scss
@@ -15,10 +15,13 @@
   }
 }
 
+.selected{
+  text-decoration: none;
+  color: $white;
+  background-color: $light-grey;
+}
+
 .nav-items-container {
   display: flex;
 }
 
-.admin-button {
-  margin-left: auto;
-}
