removes some styles to avoid css tags

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,7 +63,7 @@ canvas[style] {
           flex-direction: column;
         }
 
-        > div {
+        .chart-container {
           flex: 1;
         }
       }
