--- a/app/views/shared/_line-chart.erb
+++ b/app/views/shared/_line-chart.erb
@@ -1,4 +1,4 @@
-<div class='p-3'>
+<div class='p-3 chart-container'>
   <span class='metric-title'><%= metric_name %></span>
   <div id='chart-1' class='chart'>
     <%= line_chart metric,
