--- a/app/views/pull_requests/index.erb
+++ b/app/views/pull_requests/index.erb
@@ -1,10 +1,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-10 offset-1">
-      <%= simple_form_for :metric, url: department_pull_requests_path,
-        method: 'GET', html: {
-          class: 'nav-filter p-3 shadow-box',
-          id: 'nav-filter-form' } do |f|%>
+      <%= simple_form_for :metric, url: department_pull_requests_path, method: 'GET', html: {
+                                                        class: 'nav-filter p-3 shadow-box', id: 'nav-filter-form' } do |f|%>
             <h4 class="text-center">Merge Time distribution report for <%= params[:department_name] %> department</h4>
             <div class="row justify-content-center mt-3">
               <%= f.input :period,
