--- a/app/views/development_metrics/departments.erb
+++ b/app/views/development_metrics/departments.erb
@@ -35,7 +35,12 @@
                 <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
               </div>
               <div class="graph details">
-                <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
+                <div class="distribution-report-button mr-5 mb-2">
+                  <%= link_to 'See report',
+                              department_pull_requests_path(params[:department_name], { metric: { period: params&.dig(:metric, :period) } }),
+                              class: 'btn btn-secondary'
+                  %>
+                </div>
               </div>
             </div>
           </div>
