--- a/app/views/code_climate/departments/_code_climate_project_report.erb
+++ b/app/views/code_climate/departments/_code_climate_project_report.erb
@@ -18,4 +18,7 @@
   <td>
     <span class="code-climate-summary text-danger"><%= code_climate[:open_issues_count] %> open issues</span>
   </td>
+  <td>
+    <span class="code-climate-summary text-success"><%= code_climate[:test_coverage] %> %</span>
+  </td>
 </tr>
