Show N/D in Code Climate project report for projects that do not have test coverage

--- a/app/views/code_climate/departments/_code_climate_project_report.erb
+++ b/app/views/code_climate/departments/_code_climate_project_report.erb
@@ -19,6 +19,12 @@
     <span class="code-climate-summary text-danger"><%= code_climate[:open_issues_count] %> open issues</span>
   </td>
   <td>
-    <span class="code-climate-summary text-success"><%= code_climate[:test_coverage] %> %</span>
+    <span class="code-climate-summary">
+      <% if code_climate[:test_coverage].present? %>
+        <span class="text-success"><%= code_climate[:test_coverage] %> %</span>
+      <% else %>
+        <span class="text-muted">N/D</span>
+      <% end %>
+    </span>
   </td>
 </tr>
