adds external contributions interface, tests some cases and fixes rubocop offenses

--- a/app/views/code_climate/departments/_code_climate_department_report.erb
+++ b/app/views/code_climate/departments/_code_climate_department_report.erb
@@ -11,7 +11,7 @@
               wont_fix_issues_count: project_summary.wont_fix_issues_count,
               open_issues_count: project_summary.open_issues_count,
             } %>
-        <% end -%>
+        <% end %>
       </tbody>
     </table>
   </div>
