--- a/app/views/development_metrics/users.erb
+++ b/app/views/development_metrics/users.erb
@@ -1,4 +1,18 @@
+<%= content_for :users_dropdown do %>
+  <%= select_tag 'user_name',
+    options_for_select(
+      all_users_names,
+      selected: chosen_user,
+      disabled: 0
+    ),
+    class: 'user-selection'
+  %>
+<% end %>
+
+<%= content_for :development_metrics_sidebar do %>
+  <%=  render 'development_metrics/sidebar'%>
+<% end %>
+
 <div class="body-empty-container col-md-12 d-flex justify-content-center align-items-center">
   <span>Please select a user to see the projects he is working on</span>
 </div>
-
