--- a/app/views/pull_requests/index.erb
+++ b/app/views/pull_requests/index.erb
@@ -1,3 +1,7 @@
+<%= content_for :development_metrics_sidebar do %>
+  <%= render 'development_metrics/sidebar'%>
+<% end %>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-10 offset-1">
