--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,74 +4,6 @@
     <%= image_tag('logo-nav.svg')%>
     <span class="txt-logo">Engineering Metrics</span>
   </div>
-  <div class="btn-group btn-entity-group">
-    <div class='custom-list d-flex flex-row align-items-center'>
-      <div class='circle'></div>
-      <%= link_to departments_development_metrics_path do %>
-        <span class='font-size-1'>Department metrics</span>
-      <%end%>
-    </div>
-    <%if current_page?(departments_development_metrics_path)%>
-      <div class="list-department">
-        <select name="department_name" class="department-selection" form='nav-filter-form'>
-          <% if params[:department_name].blank? %>
-            <option selected value disabled>Choose a department</option>
-          <% else %>
-            <option value disabled>Choose a department</option>
-          <% end %>
-          <% all_departments_names.each do |name|%>
-            <%if params[:department_name] == name %>
-              <option selected value=<%= name %>> <%= name%> </option>
-            <% else %>
-              <option value=<%= name%>> <%= name%></option> %>
-            <% end %>
-          <% end %>
-        </select>
-      </div>
-    <%end%>
-  </div>
-  <div class="btn-group btn-entity-group">
-    <div class='custom-list d-flex flex-row align-items-center'>
-      <div class='circle'></div>
-      <%= link_to projects_development_metrics_path do%>
-        <span class='font-size-1'>Project metrics</span>
-      <%end%>
-    </div>
-    <%if current_page?(projects_development_metrics_path)%>
-      <div class="list-project">
-        <select name="project_name" class="project-selection" form='nav-filter-form'>
-          <% if params[:project_name].blank? %>
-            <option selected value disabled>Choose a project</option>
-          <% else %>
-            <option value disabled>Choose a project</option>
-          <% end %>
-          <% all_projects_names.each do |name|%>
-            <%if params[:project_name] == name %>
-              <option selected value=<%= name %>> <%= name%> </option>
-            <% else %>
-              <option value=<%= name%>> <%= name%></option> %>
-            <% end %>
-          <% end %>
-        </select>
-      </div>
-    <%end%>
-  </div>
-  <div class="btn-group btn-entity-group">
-    <div class='custom-list d-flex flex-row align-items-center'>
-      <div class='circle'></div>
-      <%= link_to users_development_metrics_path do%>
-        <span class='font-size-1'>Users</span>
-      <%end%>
-    </div>
-    <%if current_page?(users_development_metrics_path)%>
-      <%= select_tag 'user_name',
-        options_for_select(
-          all_users_names,
-          selected: chosen_user,
-          disabled: 0
-        ),
-        class: 'user-selection'
-      %>
-    <%end%>
-  </div>
+  <%= yield(:development_metrics_sidebar) %>
+  <%= yield(:open_source_sidebar) %>
 </div>
