--- a/app/views/users/projects/index.erb
+++ b/app/views/users/projects/index.erb
@@ -1,3 +1,7 @@
+<%= content_for :development_metrics_sidebar do %>
+  <%=  render 'development_metrics/sidebar'%>
+<% end %>
+
 <div class="metrics-container col-md-12">
   <h2 class='user-name'><%= @user.login%></h2>
   <hr>
@@ -11,14 +15,14 @@
               class: 'link-none-style-black'
           %>
         </li>
-      <%end%>
+      <% end %>
     </ul>
-  <%else%>
+  <% else %>
     <p>
       <br>
       <strong>
         <em class='ml-3'>This user is not participating in any project as code owner</em>.
       </strong>
     </p>
-  <%end%>
+  <% end %>
 </div>
