--- a/app/views/code_climate/departments/show.erb
+++ b/app/views/code_climate/departments/show.erb
@@ -1,3 +1,7 @@
+<%= content_for :development_metrics_sidebar do %>
+  <%= render 'development_metrics/sidebar'%>
+<% end %>
+
 <div class="col-md-12">
   <div class="row p-3">
     <div class="col-md-12">
@@ -9,7 +13,7 @@
           <div class="col-md-8 col-md-offset-1">
           </div>
         </div>
-      <%end%>
+      <% end %>
     </div>
   </div>
   <div class="row p-3">
