--- a/app/views/development_metrics/departments.erb
+++ b/app/views/development_metrics/departments.erb
@@ -1,3 +1,26 @@
+<%= content_for :departments_dropdown do %>
+  <div class="list-department">
+    <select name="department_name" class="department-selection" form='nav-filter-form'>
+      <% if params[:department_name].blank? %>
+        <option selected value disabled>Choose a department</option>
+      <% else %>
+        <option value disabled>Choose a department</option>
+      <% end %>
+      <% all_departments_names.each do |name|%>
+        <%if params[:department_name] == name %>
+          <option selected value=<%= name %>> <%= name%> </option>
+        <% else %>
+          <option value=<%= name%>> <%= name%></option> %>
+        <% end %>
+      <% end %>
+    </select>
+  </div>
+<% end %>
+
+<%= content_for :development_metrics_sidebar do %>
+  <%=  render 'development_metrics/sidebar'%>
+<% end %>
+
 <div class="container-fluid">
   <div class="row">
       <div class="metrics-container col-md-12">
@@ -44,13 +67,13 @@
               </div>
             </div>
           </div>
-        <%else%>
+        <% else %>
           <div class="row">
             <div class="body-empty-container col-md-12 d-flex justify-content-center align-items-center">
               <span>Please select a department to see its metrics</span>
             </div>
           </div>
-        <%end%>
+        <% end %>
       </div>
   </div>
 </div>
