--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,19 +2,19 @@
   <div class="d-flex flex-row">
     <%if content_url(/development_metrics/)%>
       <%= link_to 'Development Metrics', development_metrics_path, class: 'nav-link active nav-txt-color selected mx-1'%>
-    <%else%>
+    <% else %>
       <%= link_to 'Development Metrics', development_metrics_path, class: 'nav-link active nav-txt-color mx-1'%>
-    <%end%>
+    <% end %>
     <%if current_page?(tech_blog_path)%>
       <%= link_to 'Tech Blog', tech_blog_path, class: 'nav-link active nav-txt-color selected mx-1'%>
-    <%else%>
+    <% else %>
       <%= link_to 'Tech Blog', tech_blog_path, class: 'nav-link active nav-txt-color mx-1'%>
-    <%end%>
-    <%if current_page?(open_source_path)%>
-      <%= link_to 'Open Source', open_source_path, class: 'nav-link active nav-txt-color selected mx-1'%>
-    <%else%>
-      <%= link_to 'Open Source', open_source_path, class: 'nav-link active nav-txt-color mx-1'%>
-    <%end%>
+    <% end %>
+    <%if current_page?(open_source_index_path)%>
+      <%= link_to 'Open Source', open_source_index_path, class: 'nav-link active nav-txt-color selected mx-1'%>
+    <% else %>
+      <%= link_to 'Open Source', open_source_index_path, class: 'nav-link active nav-txt-color mx-1'%>
+    <% end %>
   </div>
   <%= link_to 'Admin', admin_events_path, class: 'nav-link active nav-txt-color mx-1'%>
 </nav>
