refactors tests, adds new cases, changes repository github client api method

--- a/app/views/users/external_pull_requests/_nav-filter.erb
+++ b/app/views/users/external_pull_requests/_nav-filter.erb
@@ -8,7 +8,7 @@
           <span>Show data for the last</span>
           <%= f.input :from,
             wrapper_html: { class: 'd-flex flex-column mb-0' },
-            input_html: { class: 'period-input-external-pr', value: chosen_period },
+            input_html: { class: 'period-input-external-pr', value: chosen_contribution_period },
             required: false,
             as: :numeric,
             label: false
