--- a/app/views/open_source/index.erb
+++ b/app/views/open_source/index.erb
@@ -1,14 +1,4 @@
-
-<% content_for :open_source_sidebar do %>
-  <div class="btn-group btn-entity-group">
-    <div class='custom-list d-flex flex-row align-items-center'>
-      <div class='circle'></div>
-      <%= link_to external_pull_requests_path do %>
-        <span class='font-size-1'>External Contributions</span>
-      <% end %>
-    </div>
-  </div>
-<% end %>
+<%= render 'open_source/sidebar' %>
 
 <div class="metrics-container">
   <div class="p-5">
